--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "uuid": "^9.0.1"
   }
 }
