--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
+    "fs": "^0.0.1-security",
+    "ml-regression": "^5.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
     "uuid": "^9.0.1"
